--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
-<div style="text-align:center">
-  <h1>
-    Rethinking the Big Patterns 2.0
-  </h1>
-  <app-pattern-selector name="Pattern" [options]="patternOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
-  <app-pattern-selector name="Stance" [options]="stanceOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
-  <app-pattern-selector name="Plane" [options]="planeOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
-  <app-pattern-selector name="Load" [options]="loadOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
-  <app-pattern-selector name="Velocity" [options]="veclocityOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
-  <app-pattern-selector name="Duration" [options]="durationOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<h1>
+  Rethinking the Big Patterns 2.0
+</h1>
+
+<app-pattern-selector name="Pattern" [options]="patternOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<app-pattern-selector name="Stance" [options]="stanceOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<app-pattern-selector name="Plane" [options]="planeOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<app-pattern-selector name="Load" [options]="loadOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<app-pattern-selector name="Velocity" [options]="veclocityOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+<app-pattern-selector name="Duration" [options]="durationOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
+
+<button (click)="getExercises()">Find exercises</button>
+<div *ngIf="foundExercise" id="exercise">
+  Exercise: {{foundExercise.name}}
 </div>
+
