--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 button{
   border-radius: 25px;
   background-color: black;
-  border: 3px red solid;
+  border: 2px red solid;
   color:  red;
   margin: 5px 5px;
   width: calc(100% - 10px);
@@ -10,9 +10,13 @@ button{
   font-weight: bold;
 }
 
-h1{
+#title{
   text-align: center;
   color: red;
+  background: black;
+  font-size: 26px;
+  margin: 0px;
+  padding: 30px;
 }
 
 #exercise{
@@ -24,4 +28,5 @@ h1{
   display: block;
   margin: 25px auto;
   font-weight: 900;
+  border: 2px solid black;
 }
