more styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="title">
-  Rethinking the Big Patterns 2.0
+  Rethinking The Big Patterns 2.0
 </div>
 
 <app-pattern-selector name="Pattern" [options]="patternOptions" (optionPicked)="optionPicked($event)"></app-pattern-selector>
@@ -11,6 +11,7 @@
 
 <button (click)="getExercises()">Find exercises</button>
 <div id="exercise">
-  Exercise: <p *ngIf="foundExercise" >{{foundExercise.name}}</p>
+  <div *ngIf="!foundExercise" > Exercise </div>
+  <div *ngIf="foundExercise" >{{foundExercise.name}}</div>
 </div>
 
