Add basic outline and titles

--- a/src/app/workout-analyzer/analysis/analysis.component.html
+++ b/src/app/workout-analyzer/analysis/analysis.component.html
@@ -1,1 +1,7 @@
-
+<div class="title">Analysis</div>
+<app-pattern-graph [title]="'Pattern'"></app-pattern-graph>
+<app-pattern-graph [title]="'Stance'"></app-pattern-graph>
+<app-pattern-graph [title]="'Plane'"></app-pattern-graph>
+<app-pattern-graph [title]="'Load'"></app-pattern-graph>
+<app-pattern-graph [title]="'Velocity'"></app-pattern-graph>
+<app-pattern-graph [title]="'Duration'"></app-pattern-graph>
