--- a/src/app/workout-analyzer/workout-analyzer.component.html
+++ b/src/app/workout-analyzer/workout-analyzer.component.html
@@ -1,3 +1,3 @@
-<app-exercise-search></app-exercise-search>
-<app-exercise-log></app-exercise-log>
+<app-exercise-search (exerciseClicked)='exerciseClicked($event)'></app-exercise-search>
+<app-exercise-log [chosenExerciseId]='chosenExerciseId'></app-exercise-log>
 <app-analysis></app-analysis>
