--- a/src/app/workout-analyzer/exercise-log/exercise-log.component.html
+++ b/src/app/workout-analyzer/exercise-log/exercise-log.component.html
@@ -9,9 +9,10 @@
     </thead>
     <tr class="row" *ngFor="let exercise of loggedExercises; let i = index">
         <td class="exerciseNameColumn">{{exercise.exerciseName}}</td>
-        <td><input (change)="changeTotals(i)" id="{{'reps_'+i}}" type="number"></td>
-        <td><input (change)="changeTotals(i)" id="{{'sets_'+i}}" type="number"></td>
-        <td><input (change)="changeTotals(i)" id="{{'load_'+i}}" type="number"></td>
+        <td><input id="{{'reps_'+i}}" type="number"></td>
+        <td><input id="{{'sets_'+i}}" type="number"></td>
+        <td><input id="{{'load_'+i}}" type="number"></td>
         <td class="delete" (click)="removeExercise(i)">delete</td>
     </tr>
 </table>
+<button id="analyzeButton" (click)="runAnalysis()" *ngIf="loggedExercises.length > 0">Analyze</button>
