--- a/src/app/workout-analyzer/workout-analyzer.component.html
+++ b/src/app/workout-analyzer/workout-analyzer.component.html
@@ -1,3 +1,3 @@
 <app-exercise-search (exerciseClicked)='exerciseClicked($event)'></app-exercise-search>
-<app-exercise-log [chosenExerciseId]='chosenExerciseId'></app-exercise-log>
-<app-analysis></app-analysis>
+<app-exercise-log [chosenExerciseId]='chosenExerciseId' (exerciseLogData)='exerciseLogData($event)'></app-exercise-log>
+<app-analysis [exerciseLogVolumes]='exerciseLogVolumes'></app-analysis>
