--- a/src/app/workout-analyzer/analysis/pattern-graph/pattern-graph.component.html
+++ b/src/app/workout-analyzer/analysis/pattern-graph/pattern-graph.component.html
@@ -1,1 +1,3 @@
+<div *ngFor="let value of loadValues; let i=index" >{{value}}</div>
+<div *ngFor="let category of categories; let i=index" >{{category}}</div>
 <div class="title">{{title}}</div>
