--- a/src/app/workout-analyzer/analysis/analysis.component.scss
+++ b/src/app/workout-analyzer/analysis/analysis.component.scss
@@ -9,3 +9,18 @@
 .title{
   text-align: center;
 }
+
+#container {
+  width:100%;
+  text-align:center;
+ }
+ 
+ #container > div {
+  width: calc(100% / 6 - 120px);  
+  display: inline-block;
+  vertical-align: top;   
+  border:1px solid black;
+  text-align:center;
+  margin:2%;    
+  padding:20px;
+ }
