--- a/src/app/workout-analyzer/exercise-log/exercise-log.component.scss
+++ b/src/app/workout-analyzer/exercise-log/exercise-log.component.scss
@@ -1,14 +1,13 @@
 :host{
-  border: 1px solid black;
-  position: absolute;
-  float: right;
-  right: 0px;
-  height: calc(50vh - 2px);
-  width: calc(50vw - 2px);
+  width: 50%;
+  height: 40%; 
+  float: left; 
+  background: lightsteelblue;
 }
 
 .title{
   text-align: center;
+  font-weight: 900;
 }
 
 table{
@@ -25,10 +24,19 @@ th, td{
   width: 25vw;
 }
 
-input{
+input {
+  width: 30px;
+  border: 1px solid #00B4CC;
+  padding: 5px;
+  height: 10px;
+  border-radius: 5px;
+  outline: none;
   display: block;
   margin: auto;
-  width: 30px;
+}
+
+input:focus{
+  border: 3px solid #00B4CC;
 }
 
 .delete{
