--- a/src/app/workout-analyzer/analysis/analysis.component.scss
+++ b/src/app/workout-analyzer/analysis/analysis.component.scss
@@ -1,13 +1,13 @@
 :host{
-  border: 1px solid black;
-  position: absolute;
-  bottom: 0px;
-  height: calc(50vh - 2px);
-  width: calc(100vw - 2px);
+  width: 100%;
+  height: 60%; 
+  float: left; 
+  background: lightgray;
 }
 
 .title{
   text-align: center;
+  font-weight: 900;
 }
 
 #container {
@@ -16,11 +16,13 @@
  }
  
  #container > div {
-  width: calc(100% / 6 - 120px);  
+  width: calc(100% / 3 - 30px); 
+  height: calc(60% /2 - 40px);
   display: inline-block;
   vertical-align: top;   
-  border:1px solid black;
+  border:1px solid white;
+  background: white;
+  border-radius: 5px;
   text-align:center;
-  margin:2%;    
-  padding:20px;
+  margin: 20px 2px;
  }
