--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-  margin: 0px;
-  padding: 0px;
-}
 html, body {
-  font-family: 'Muli';
+  font-family: 'Muli'; 
+  height: 100%; 
+  padding: 0; 
+  margin: 0;
 }
 *:focus {
   outline: none;
